--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,4 @@
 0.0.1 - 4/2015: Birth!
 0.0.2 - 5/1/2015: Added an init_pool method and a create_client constructor.
 0.0.3 - 5/2/2015: Using ujson for serialization.
+0.0.4 - 5/12/2015: Added support for sessions.
