getting ready for release

--- a/changes.txt
+++ b/changes.txt
@@ -2,3 +2,4 @@
 0.0.2 - 5/1/2015: Added an init_pool method and a create_client constructor.
 0.0.3 - 5/2/2015: Using ujson for serialization.
 0.0.4 - 5/12/2015: Added support for sessions.
+0.0.5 - 5/13/2015: Using EofStream terminator technique to prepare for 3.0.0.M9
